Fix so that first page looks ok on mobile.

--- a/stylus/css/main.styl
+++ b/stylus/css/main.styl
@@ -21,5 +21,4 @@ img[class~=pull-left]
   margin: 0px 0px 40px 0px
 
 .front-page-news-col
-  padding: 0px 40px
-  text-align: center
+  padding: 20px 40px
